# gramag

./: .gitignore  Cargo.toml  README.md  TODO.md  example.py  justfile  pyproject.toml
.github/workflows/: python.yml
docs/: requirements.txt
docs/source/: conf.py  index.rst
docs/source/examples/: advanced.py  celegans.py  cycle.py  distance_matrix.py  distance_matrix_2.py  threading_example.py  timed.py
examples/: .gitignore  celegans.py  simple.py  timed.py
src/: bindings.rs  distances.rs  homology.rs  lib.rs  main.rs  new_path_search.rs  old_bindings.rs  path_search.rs  phlite_homology.rs  phlite_types.rs  utils.rs
