[build-system]
requires = ["maturin>=1.4.0"]
build-backend = "maturin"

[project]
name = "gramag"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.maturin]
features = ["python"]
